Centers TextBlocks in UserControls

--- a/PitBoss/UserControls/GunBattery_UserControl.xaml
+++ b/PitBoss/UserControls/GunBattery_UserControl.xaml
@@ -16,11 +16,11 @@
         <GroupBox Grid.Row="0" Grid.Column="0" Header="Firing Coordinates">
             <StackPanel Margin="3,3,3,3">
                 <StackPanel Orientation="Horizontal">
-                    <TextBlock Width="35" Margin="3,3,3,3" FontSize="20" >Dist:</TextBlock>
+                    <TextBlock Width="35" Margin="3,3,3,3" FontSize="20" VerticalAlignment="Center">Dist:</TextBlock>
                     <TextBox x:Name="Dist_TextBox" Text="{Binding Path=LatestDist}" IsReadOnly="True" FontSize="20"  Width="75" Margin="3,3,3,3"/>
                 </StackPanel>
                 <StackPanel Orientation="Horizontal">
-                    <TextBlock Width="35" Margin="3,3,3,3" FontSize="20" >Az:</TextBlock>
+                    <TextBlock Width="35" Margin="3,3,3,3" FontSize="20" VerticalAlignment="Center">Az:</TextBlock>
                     <TextBox x:Name="Az_TextBox" Text="{Binding Path=LatestAz}" IsReadOnly="True" FontSize="20" Width="75" Margin="3,3,3,3"/>
                 </StackPanel>
             </StackPanel>
