--- a/PitBoss/AboutWindow.xaml
+++ b/PitBoss/AboutWindow.xaml
@@ -8,8 +8,11 @@
         Title="AboutWindow" Height="450" Width="800">
     <StackPanel Margin="5,5,5,5">
         <TextBlock FontSize="32" Text="The Pit Boss" HorizontalAlignment="Center"/>
-        <TextBlock Text="A Foxhole artillery coordination tool, 2024. Written by [82DK-A] Witch,PhD"/>
-        <TextBox Width="220" HorizontalAlignment="Left" IsReadOnly="True">
+        <TextBlock Text="A Foxhole artillery coordination tool, 2024." Margin="0,0,0,5"/>
+        <TextBlock Text="Written by [82DK-A] Witch,PhD" Margin="0,0,0,5"/>
+        <TextBlock Text="Contributors:"/>
+        <TextBlock Text="[82DK-A] Huners"/>
+        <TextBox Width="220" HorizontalAlignment="Left" IsReadOnly="True" Margin="0,10,0,5">
             https://github.com/Witch-PhD/PitBoss
         </TextBox>
 
