Adds ToolTip to Dist and Az abbreviation

--- a/PitBoss/UserControls/GunBattery_UserControl.xaml
+++ b/PitBoss/UserControls/GunBattery_UserControl.xaml
@@ -16,11 +16,11 @@
         <GroupBox Grid.Row="0" Grid.Column="0" Header="Firing Coordinates">
             <StackPanel Margin="3,3,3,3">
                 <StackPanel Orientation="Horizontal">
-                    <TextBlock Width="40" Margin="5,5,5,5" FontSize="20" VerticalAlignment="Center">Dist:</TextBlock>
+                    <TextBlock Width="40" Margin="5,5,5,5" FontSize="20" VerticalAlignment="Center" ToolTip="Distance">Dist:</TextBlock>
                     <TextBox x:Name="Dist_TextBox" Text="{Binding Path=LatestDist, StringFormat=F1}" IsReadOnly="True" FontSize="20"  Width="75" Margin="5,5,5,5"/>
                 </StackPanel>
                 <StackPanel Orientation="Horizontal">
-                    <TextBlock Width="40" Margin="5,5,5,5" FontSize="20" VerticalAlignment="Center">Az:</TextBlock>
+                    <TextBlock Width="40" Margin="5,5,5,5" FontSize="20" VerticalAlignment="Center" ToolTip="Azimut">Az:</TextBlock>
                     <TextBox x:Name="Az_TextBox" Text="{Binding Path=LatestAz, StringFormat=F1}" IsReadOnly="True" FontSize="20" Width="75" Margin="5,5,5,5"/>
                 </StackPanel>
             </StackPanel>
