--- a/PitBoss/UserControls/ConnectionsUserControl.xaml
+++ b/PitBoss/UserControls/ConnectionsUserControl.xaml
@@ -27,7 +27,7 @@
                 <Button x:Name="StartServer_Button" Content="Start as Server" HorizontalAlignment="Left" VerticalAlignment="Top" Click="StartServer_Button_Click" Margin="5,5,5,5"/>
                 <StackPanel x:Name="userIp_stackPanel" Visibility="Hidden">
                     <StackPanel Orientation="Horizontal">
-                        <TextBlock VerticalAlignment="Center" Margin="3,3,3,3">Your IP Address:</TextBlock>
+                        <TextBlock VerticalAlignment="Center" Margin="3,3,3,3" Text="Your IP Address:"/>
                         <TextBox x:Name="userIp_textBox" Height="25" FontSize="14" VerticalContentAlignment="Center" Text="000.000.000.000" HorizontalAlignment="Left" VerticalAlignment="Top" IsReadOnly="True" Margin="5,5,5,5"/>
                     </StackPanel>
                     <Button x:Name="CopyIp_Button" Content="Copy IP Address" HorizontalAlignment="Left" VerticalAlignment="Top" Click="CopyIp_Button_Click" Margin="5,5,5,5"/>
