--- a/PitBoss/UserControls/UserOptions_UserControl.xaml
+++ b/PitBoss/UserControls/UserOptions_UserControl.xaml
@@ -38,15 +38,15 @@
 
                 <StackPanel Grid.Row="0" Grid.Column="1">
                     <StackPanel Orientation="Horizontal">
-                        <TextBlock Width="70" Margin="3,3,3,3" VerticalAlignment="Center">Label Color:</TextBlock>
+                        <TextBlock Width="70" Margin="3,3,3,3" VerticalAlignment="Center" Text="Label Color:"/>
                         <ComboBox x:Name="LabelColor_ComboBox" SelectedValue="{Binding Path=userOptions.OverlayLabelsFontColor}" Margin="3,3,3,3" IsEnabled="False"/>
                     </StackPanel>
                     <StackPanel Orientation="Horizontal">
-                        <TextBlock Width="70" Margin="3,3,3,3" VerticalAlignment="Center">Value Color:</TextBlock>
+                        <TextBlock Width="70" Margin="3,3,3,3" VerticalAlignment="Center" Text="Value Color:"/>
                         <ComboBox x:Name="ValueColor_ComboBox" SelectedValue="{Binding Path=userOptions.OverlayValuesFontColor}" Margin="3,3,3,3" IsEnabled="False"/>
                     </StackPanel>
                     <StackPanel Orientation="Horizontal">
-                        <TextBlock Width="70" Margin="3,3,3,3" VerticalAlignment="Center">Font Size:</TextBlock>
+                        <TextBlock Width="70" Margin="3,3,3,3" VerticalAlignment="Center" Text="Font Size:"/>
                         <TextBox x:Name="FontSize_TextBox" KeyDown="TextBox_UpdateOnEnter" Width="30" Margin="3,3,3,3" IsEnabled="False">
                             <TextBox.ToolTip>
                                 Min: 8, Max: 72
@@ -80,7 +80,7 @@
                     <TextBlock Text="Custom Shortcuts Menu: " Margin="3,3,3,3" VerticalAlignment="Center"/>
                     <Button x:Name="Shortcuts_Button" Margin="3,3,3,3" VerticalAlignment="Top" Content="Show" Click="Shortcuts_Button_Click"/>
                 </StackPanel>
-                <Grid x:Name="ShorcutsMenu" Grid.Row="2" Visibility="Hidden">
+                <Grid x:Name="ShorcutsMenu" Grid.Row="2" Visibility="Visible">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="2*"/>
                         <ColumnDefinition/>
