Adds English.xaml as basic ResourceDictionary

--- a/PitBoss/App.xaml
+++ b/PitBoss/App.xaml
@@ -5,6 +5,10 @@
              Startup="Application_Startup"
                Exit="Application_Exit">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Rescources\English.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
